Fixed a minor string formatting issue that GitHub complained about